Updates to allow jacoco to run   - Do not add synthetic members to inspection   - Prevents inspection tests from failing when jacoco agent is enabled